--- a/index.html
+++ b/index.html
@@ -139,12 +139,12 @@
     <div class="chat-container">
       <div class="messages" id="chat-box">
         <div class="message">您好，请叫我曹先生</div>
-        <div class="message quick">🔍红楼梦中有哪些美食？</div>
-        <div class="message quick">🔍红楼梦中有哪些判词？</div>
-        <div class="message quick">🔍红楼梦中有哪些故事？</div>
-        <div class="message quick">🔍大梦·红楼有哪些值得一看的亮点？</div>
-        <div class="message quick">🔍大梦·红楼和其他红楼梦演出有哪些不同？</div>
-        <div class="message quick">🔍你是曹雪芹吗？你是如何AI重生的？</div>
+        <div class="message quick">红楼梦中有哪些美食？</div>
+        <div class="message quick">红楼梦中有哪些判词？</div>
+        <div class="message quick">红楼梦中有哪些故事？</div>
+        <div class="message quick">大梦·红楼有哪些值得一看的亮点？</div>
+        <div class="message quick">大梦·红楼和其他红楼梦演出有哪些不同？</div>
+        <div class="message quick">你是曹雪芹吗？你是如何AI重生的？</div>
       </div>
       <div class="input-area">
         <input type="text" id="user-input" placeholder="请输入问题，Ctrl+Enter 发送" />
@@ -174,7 +174,7 @@
         chatBox.appendChild(responseMsg);
 
         try {
-          const res = await fetch("https://web-production-6954e.up.railway.app/ask  ", {
+          const res = await fetch("https://web-production-6954e.up.railway.app/ask", {
             method: "POST",
             headers: { "Content-Type": "application/json" },
             body: JSON.stringify({ question })
@@ -199,7 +199,7 @@
 
               const header = document.createElement("div");
               header.className = "quick-questions-header";
-              header.textContent = "猜你还想问曹先生~";
+              header.textContent = "猜你还想问老夫~";
               quickQuestionsContainer.appendChild(header);
 
               const quickQuestionsList = document.createElement("div");
