--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         <div class="message quick">🔍你是曹雪芹吗？你是如何AI重生的？</div>
       </div>
       <div class="input-area">
-        <input type="text" id="user-input" placeholder="请输入问题，Ctrl+Enter 发送" />
+        <input type="text" id="user-input" placeholder="请输入问题，点击下方发送" />
         <button onclick="sendMessage()">发送</button>
       </div>
     </div>
