--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>曹先生智能问答</title>
     <style>
-        /* 你原有的样式 */
         * {
             margin: 0;
             padding: 0;
@@ -137,8 +136,8 @@
         /* 新增的样式 */
         #name-print-container {
             position: absolute;
-            bottom: 50px;
-            left: 25%;
+            top: 20vh; /* 向右上移动 */
+            left: 25vw;
             display: flex;
             flex-direction: column;
             align-items: center;
