--- a/index.html
+++ b/index.html
@@ -136,13 +136,11 @@
         /* 新增的样式 */
         #name-print-container {
             position: absolute;
-            top: 20vh; /* 向右上移动 */
-            left: 25vw;
+            top: 10vh; /* 距离顶部10vh */
+            left: 10vw; /* 距离左侧10vw */
             display: flex;
             flex-direction: column;
             align-items: center;
-            writing-mode: vertical-rl;
-            text-orientation: mixed;
         }
         .name-input-container {
             display: flex;
