--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
     <!-- 新增的模块 -->
     <div id="name-print-container">
         <div class="name-input-container">
-            <input type="text" id="name-input" class="name-input" placeholder="请输入您的名字">
+            <input type="text" id="name-input" class="name-input" placeholder="输入名字">
         </div>
         <button id="print-btn" class="print-button">打印信件</button>
     </div>
