--- a/index.html
+++ b/index.html
@@ -1,342 +1,254 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>曹先生智能问答</title>
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-    html, body {
-      height: 100%;
-      font-family: -apple-system, BlinkMacSystemFont, sans-serif;
-      overflow: hidden;
-    }
-    .video-bg {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      height: 100vh;
-      object-fit: cover;
-      z-index: -1;
-    }
-    .chat-container {
-      position: absolute;
-      top: 17vh;
-      right: 7vw;
-      height: 76vh;
-      width: 50vw;
-      padding: 20px;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      backdrop-filter: blur(12px);
-      background: rgba(255, 255, 255, 0.3);
-      box-shadow: -4px 0 20px rgba(0, 0, 0, 0.1);
-      border-radius: 20px;
-    }
-    .messages {
-      flex: 1;
-      overflow-y: auto;
-      display: flex;
-      flex-direction: column;
-      gap: 8px;
-      padding-right: 10px;
-    }
-    .message {
-      background: rgba(255, 255, 255, 0.9);
-      padding: 10px 14px;
-      border-radius: 12px;
-      word-wrap: break-word;
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-      max-width: 90%;
-      white-space: pre-wrap;
-      text-indent: 2em;
-    }
-    .message.user {
-      background-color: #397eff;
-      color: white;
-      align-self: flex-end;
-      max-width: fit-content;
-      text-indent: 0;
-    }
-    .message.quick {
-      cursor: pointer;
-    }
-    .quick-question-bubble {
-      background-color: #f0f0f0;
-      color: #333;
-      padding: 8px 12px;
-      margin-top: 6px;
-      margin-right: auto;
-      border-radius: 999px;
-      display: inline-block;
-      cursor: pointer;
-      box-shadow: 0 1px 3px rgba(0,0,0,0.1);
-      max-width: fit-content;
-    }
-    .input-area {
-      display: flex;
-      gap: 10px;
-      align-items: center;
-      padding-top: 10px;
-    }
-    .input-area input {
-      flex: 1;
-      padding: 12px;
-      font-size: 16px;
-      border-radius: 999px;
-      border: none;
-      outline: none;
-    }
-    .input-area button {
-      padding: 10px 18px;
-      border: none;
-      border-radius: 999px;
-      background-color: #d4237a;
-      color: white;
-      cursor: pointer;
-      font-weight: bold;
-    }
-
-    /* 🔻打印按钮区域 */
-    .print-section {
-      position: fixed;
-      bottom: 10vh;
-      left: 8vw;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 8px;
-      z-index: 99;
-    }
-
-    #unitInput {
-      padding: 8px 12px;
-      border: 1px solid #ccc;
-      border-radius: 20px;
-      writing-mode: vertical-rl;
-      height: 80px;
-      font-size: 14px;
-      text-align: center;
-    }
-
-    .print-btn {
-      background-color: rgba(255, 0, 0, 0.6);
-      color: white;
-      border: none;
-      border-radius: 20px;
-      cursor: pointer;
-      padding: 10px;
-      writing-mode: vertical-rl;
-      height: 60px;
-    }
-
-    #printArea {
-      display: none;
-    }
-
-    #printArea .name-display {
-      position: absolute;
-      top: 3cm;
-      right: 2cm;
-      writing-mode: vertical-rl;
-      font-size: 18px;
-      font-weight: bold;
-    }
-
-    @media print {
-      body *:not(#printArea):not(#printArea *) {
-        display: none !important;
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>曹先生智能问答</title>
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
       }
-      #printArea {
-        display: block;
-        position: absolute;
-        width: 100%;
+      html, body {
         height: 100%;
+        font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+        overflow: hidden;
       }
-    }
-
-    /* 📱响应式适配 */
-    @media (max-width: 1024px) {
+      .video-bg {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+        object-fit: cover;
+        z-index: -1;
+      }
       .chat-container {
-        width: 90vw;
-        right: 5vw;
-        top: 12vh;
+        position: absolute;
+        top: 17vh;
+        right: 7vw;
         height: 76vh;
-        padding: 16px;
+        width: 50vw;
+        padding: 20px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        backdrop-filter: blur(12px);
+        background: rgba(255, 255, 255, 0.3);
+        box-shadow: -4px 0 20px rgba(0, 0, 0, 0.1);
+        border-radius: 20px;
       }
-    }
-    @media (max-width: 600px) {
-      .chat-container {
-        width: 96vw;
-        right: 2vw;
-        top: 8vh;
-        height: 82vh;
-        padding: 12px;
+      .messages {
+        flex: 1;
+        overflow-y: auto;
+        display: flex;
+        flex-direction: column;
+        gap: 8px;
+        padding-right: 10px;
       }
       .message {
-        font-size: 13px;
-        text-indent: 1.5em;
+        background: rgba(255, 255, 255, 0.9);
+        padding: 10px 14px;
+        border-radius: 12px;
+        word-wrap: break-word;
+        box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+        max-width: 90%;
+        white-space: pre-wrap;
+        text-indent: 2em;
+      }
+      .message.user {
+        background-color: #397eff;
+        color: white;
+        align-self: flex-end;
+        max-width: fit-content;
+        text-indent: 0;
+      }
+      .quick-question-bubble {
+        background-color: #f0f0f0;
+        color: #333;
+        padding: 8px 12px;
+        margin-top: 6px;
+        margin-right: auto;
+        border-radius: 999px;
+        display: inline-block;
+        cursor: pointer;
+        box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+        max-width: fit-content;
+      }
+      .quick-questions-container {
+        display: flex;
+        flex-direction: column;
+        gap: 8px;
+        margin-top: 8px;
+      }
+      .quick-questions-header {
+        font-size: 14px;
+        color: #666;
+        margin-bottom: 6px;
+      }
+      .quick-questions-list {
+        background-color: white;
+        border-radius: 12px;
+        padding: 12px;
+        box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+      }
+      .quick-question-item {
+        padding: 8px 0;
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+      }
+      .quick-question-item:hover {
+        background-color: #f5f5f5;
+      }
+      .quick-question-item::before {
+        content: '🔍';
+        margin-right: 8px;
       }
       .input-area {
-        flex-direction: column;
-        align-items: stretch;
-        gap: 6px;
+        display: flex;
+        gap: 10px;
+        align-items: center;
+        padding-top: 10px;
       }
-      .input-area input,
+      .input-area input {
+        flex: 1;
+        padding: 12px;
+        font-size: 16px;
+        border-radius: 999px;
+        border: none;
+        outline: none;
+      }
       .input-area button {
-        width: 100%;
-        font-size: 13px;
-        padding: 10px;
-        border-radius: 12px;
+        padding: 10px 18px;
+        border: none;
+        border-radius: 999px;
+        background-color: #d4237a;
+        color: white;
+        cursor: pointer;
+        font-weight: bold;
       }
-    }
-  </style>
-</head>
-<body>
-  <video class="video-bg" src="video.mov" autoplay muted loop></video>
-
-  <div class="chat-container">
-    <div class="messages" id="chat-box">
-      <div class="message">您好，请叫我曹先生</div>
-      <div class="message quick">🔍红楼梦中有哪些美食？</div>
-      <div class="message quick">🔍红楼梦中有哪些判词？</div>
-      <div class="message quick">🔍红楼梦中有哪些故事？</div>
-      <div class="message quick">🔍大梦·红楼有哪些值得一看的亮点？</div>
-      <div class="message quick">🔍大梦·红楼和其他红楼梦演出有哪些不同？</div>
-      <div class="message quick">🔍你是曹雪芹吗？你是如何AI重生的？</div>
+      .message.quick {
+        cursor: pointer;
+      }
+    </style>
+  </head>
+  <body>
+    <video class="video-bg" src="video.mov" autoplay muted loop></video>
+    <div class="chat-container">
+      <div class="messages" id="chat-box">
+        <div class="message">您好，请叫我曹先生</div>
+        <div class="message quick">🔍红楼梦中有哪些美食？</div>
+        <div class="message quick">🔍红楼梦中有哪些判词？</div>
+        <div class="message quick">🔍红楼梦中有哪些故事？</div>
+        <div class="message quick">🔍大梦·红楼有哪些值得一看的亮点？</div>
+        <div class="message quick">🔍大梦·红楼和其他红楼梦演出有哪些不同？</div>
+        <div class="message quick">🔍你是曹雪芹吗？你是如何AI重生的？</div>
+      </div>
+      <div class="input-area">
+        <input type="text" id="user-input" placeholder="请输入问题，Ctrl+Enter 发送" />
+        <button onclick="sendMessage()">发送</button>
+      </div>
     </div>
-    <div class="input-area">
-      <input type="text" id="user-input" placeholder="请输入问题，点击发送" />
-      <button onclick="sendMessage()">发送</button>
-    </div>
-  </div>
 
-  <!-- 🟥打印功能区 -->
-  <div class="print-section">
-    <input type="text" id="unitInput" placeholder="输入姓名">
-    <button id="submitBtn" class="print-btn">敬启</button>
-  </div>
+    <script>
+      async function sendMessage() {
+        const input = document.getElementById("user-input");
+        const question = input.value.trim();
+        if (!question) return;
 
-  <!-- 🖨打印输出区域 -->
-  <div id="printArea"></div>
+        const chatBox = document.getElementById("chat-box");
 
-  <script>
-    async function sendMessage() {
-      const input = document.getElementById("user-input");
-      const question = input.value.trim();
-      if (!question) return;
+        const userMsg = document.createElement("div");
+        userMsg.className = "message user";
+        userMsg.textContent = question;
+        chatBox.appendChild(userMsg);
 
-      const chatBox = document.getElementById("chat-box");
+        input.value = "";
+        chatBox.scrollTop = chatBox.scrollHeight;
 
-      const userMsg = document.createElement("div");
-      userMsg.className = "message user";
-      userMsg.textContent = question;
-      chatBox.appendChild(userMsg);
+        const responseMsg = document.createElement("div");
+        responseMsg.className = "message";
+        responseMsg.textContent = "曹先生思考中...";
+        chatBox.appendChild(responseMsg);
 
-      input.value = "";
-      chatBox.scrollTop = chatBox.scrollHeight;
-
-      const responseMsg = document.createElement("div");
-      responseMsg.className = "message";
-      responseMsg.textContent = "曹先生思考中...";
-      chatBox.appendChild(responseMsg);
-
-      try {
-        const res = await fetch("https://web-production-6954e.up.railway.app/ask", {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ question })
-        });
-
-        const data = await res.json();
-
-        if (data.content) {
-          const relatedMatches = [...data.content.matchAll(/<quick_question>\s*(.*?)\s*<\/quick_question>/gs)];
-          let mainText = data.content;
-          relatedMatches.forEach(match => {
-            mainText = mainText.replace(match[0], '');
+        try {
+          const res = await fetch("https://web-production-6954e.up.railway.app/ask ", {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify({ question })
           });
-          responseMsg.textContent = mainText.trim();
 
-          if (relatedMatches.length > 0) {
-            const quickContainer = document.createElement("div");
-            quickContainer.className = "quick-questions-container";
-            const header = document.createElement("div");
-            header.className = "quick-questions-header";
-            header.textContent = "猜你还想问曹先生~";
-            const list = document.createElement("div");
-            list.className = "quick-questions-list";
+          const data = await res.json();
 
+          if (data.content) {
+            // 提取 <quick_question> 标签中的内容，考虑换行符
+            const relatedMatches = [...data.content.matchAll(/<quick_question>\s*(.*?)\s*<\/quick_question>/gs)];
+            // 去除 <quick_question> 标签，得到主回答内容
+            let mainText = data.content;
             relatedMatches.forEach(match => {
-              const quick = document.createElement("div");
-              quick.className = "quick-question-item";
-              quick.textContent = match[1].trim();
-              quick.onclick = () => sendMessageWithQuestion(match[1].trim());
-              list.appendChild(quick);
+              mainText = mainText.replace(match[0], '');
             });
+            responseMsg.textContent = mainText.trim(); // 去除首尾空白
 
-            quickContainer.appendChild(header);
-            quickContainer.appendChild(list);
-            chatBox.appendChild(quickContainer);
+            // 创建问题框容器
+            if (relatedMatches.length > 0) {
+              const quickQuestionsContainer = document.createElement("div");
+              quickQuestionsContainer.className = "quick-questions-container";
+
+              const header = document.createElement("div");
+              header.className = "quick-questions-header";
+              header.textContent = "猜你还想问曹先生~";
+              quickQuestionsContainer.appendChild(header);
+
+              const quickQuestionsList = document.createElement("div");
+              quickQuestionsList.className = "quick-questions-list";
+
+              // 创建问题框
+              relatedMatches.forEach(match => {
+                const quick = document.createElement("div");
+                quick.className = "quick-question-item";
+                quick.textContent = match[1].trim(); // 去除可能的首尾空白
+                quick.onclick = () => {
+                  sendMessageWithQuestion(match[1].trim());
+                };
+                quickQuestionsList.appendChild(quick);
+              });
+
+              quickQuestionsContainer.appendChild(quickQuestionsList);
+              chatBox.appendChild(quickQuestionsContainer);
+            }
+          } else {
+            responseMsg.textContent = "抱歉，未能获取回答。";
           }
-        } else {
-          responseMsg.textContent = "抱歉，未能获取回答。";
+        } catch (err) {
+          responseMsg.textContent = "网络错误，请稍后重试。";
         }
-      } catch (err) {
-        responseMsg.textContent = "网络错误，请稍后重试。";
+
+        chatBox.scrollTop = chatBox.scrollHeight;
       }
 
-      chatBox.scrollTop = chatBox.scrollHeight;
-    }
-
-    function sendMessageWithQuestion(question) {
-      const input = document.getElementById("user-input");
-      input.value = question;
-      sendMessage();
-    }
-
-    document.getElementById("user-input").addEventListener("keydown", function (e) {
-      if (e.key === "Enter") {
-        e.preventDefault();
+      function sendMessageWithQuestion(question) {
+        const input = document.getElementById("user-input");
+        input.value = question;
         sendMessage();
       }
-    });
 
-    document.querySelectorAll(".message.quick").forEach(el => {
-      el.addEventListener("click", () => {
-        const question = el.textContent.replace(/^🔍\s*/, "");
-        sendMessageWithQuestion(question);
-      });
-    });
-
-    // 🖨打印姓名逻辑
-    document.addEventListener('DOMContentLoaded', function () {
-      const submitBtn = document.getElementById('submitBtn');
-      const unitInput = document.getElementById('unitInput');
-
-      submitBtn.addEventListener('click', function () {
-        const name = unitInput.value.trim();
-        if (name) {
-          const printArea = document.getElementById('printArea');
-          printArea.innerHTML = '';
-
-          const nameDisplay = document.createElement('div');
-          nameDisplay.className = 'name-display';
-          nameDisplay.textContent = name;
-
-          printArea.appendChild(nameDisplay);
-
-          window.print();
-          setTimeout(() => location.reload(), 500);
+      document.getElementById("user-input").addEventListener("keydown", function (e) {
+        if (e.key === "Enter") {
+          e.preventDefault();
+          sendMessage();
         }
       });
-    });
-  </script>
-</body>
+
+      // 为初始的六个问题框绑定点击事件
+      document.querySelectorAll(".message.quick").forEach(el => {
+        el.addEventListener("click", () => {
+          const question = el.textContent.replace(/^🔍\s*/, "");
+          sendMessageWithQuestion(question);
+        });
+      });
+    </script>
+  </body>
 </html>
